add new article (ford on promoting)

--- a/public/a-hint-on-how-to-speed-up-jekyll-regeneration/index.html
+++ b/public/a-hint-on-how-to-speed-up-jekyll-regeneration/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Dec 27, 2015 </div>
-  <h1>A Hint on How to Speed Up Jekyll Regeneration</h1>
+  <h1 class="article-title">A Hint on How to Speed Up Jekyll Regeneration</h1>
   
   <p>My Jekyll site was way too slow recently.
 It took around 1 minute per regeneration and much more for starting a server.</p>
