--- a/public/henry-ford-for-makers-quotes-on-design/index.html
+++ b/public/henry-ford-for-makers-quotes-on-design/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Nov 10, 2015 </div>
-  <h1>Henry Ford for Makers: Quotes on Design</h1>
+  <h1 class="article-title">Henry Ford for Makers: Quotes on Design</h1>
   
   <p>These are short excerpts from Henry Ford&rsquo;s “My Life and Work”. I picked
 the ones that will be helpful especially to makers&mdash;designers, developers, etc.</p>
