--- a/public/how-not-to-be-afraid-of-the-future-web-development-and-lindy-effect/index.html
+++ b/public/how-not-to-be-afraid-of-the-future-web-development-and-lindy-effect/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Feb 26, 2016 </div>
-  <h1>How Not to Be Afraid of the Future: Web Development and Lindy Effect</h1>
+  <h1 class="article-title">How Not to Be Afraid of the Future: Web Development and Lindy Effect</h1>
   
   <p>No one really knows the future,
 but there are some pretty clear patterns worth exploring.
