--- a/public/learning-ui-design-from-coins-on-contrast/index.html
+++ b/public/learning-ui-design-from-coins-on-contrast/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Aug 19, 2016 </div>
-  <h1>Learning UI Design from Coins (on Contrast)</h1>
+  <h1 class="article-title">Learning UI Design from Coins (on Contrast)</h1>
   
   <p>Contrasts are one of key elements when it comes to usability. Lets take coins as an example.</p>
 
