--- a/public/looking-at-craftsmen/index.html
+++ b/public/looking-at-craftsmen/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Sep 20, 2016 </div>
-  <h1>Looking at Craftsmen</h1>
+  <h1 class="article-title">Looking at Craftsmen</h1>
   
   <div class="video video-overflow fit-vid">
   <iframe src="https://www.youtube.com/embed/5tusreUDXUM" frameborder="0" allowfullscreen></iframe>
