--- a/public/maintainable-ui-how-to-improve-code-editing-with-sass/index.html
+++ b/public/maintainable-ui-how-to-improve-code-editing-with-sass/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Nov 10, 2015 </div>
-  <h1>Maintainable UI: How to Improve Code Editing with SASS</h1>
+  <h1 class="article-title">Maintainable UI: How to Improve Code Editing with SASS</h1>
   
   <p>Changes are unavoidable. And you can’t predict the future.
 You also can’t solve problems in theory only, without prototyping.
