--- a/public/on-lazy-load-overuse-and-what-you-can-do-instead/index.html
+++ b/public/on-lazy-load-overuse-and-what-you-can-do-instead/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Oct 19, 2016 </div>
-  <h1>On Lazy Load Overuse and What You can Do Instead</h1>
+  <h1 class="article-title">On Lazy Load Overuse and What You can Do Instead</h1>
   
   <p>Lazy Load is a great idea, so it&rsquo;s overused frequently.
 Do you remember that situation when you scrolled down
