--- a/public/payment-uis-can-be-used-to-reduce-friction/index.html
+++ b/public/payment-uis-can-be-used-to-reduce-friction/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Mar 8, 2016 </div>
-  <h1>Payment UIs Can be Used to Reduce Friction</h1>
+  <h1 class="article-title">Payment UIs Can be Used to Reduce Friction</h1>
   
   <p>A page with a final &ldquo;buy&rdquo; button or a credit card data form
 is a huge friction trigger.
