--- a/public/research-vs-making-decisions/index.html
+++ b/public/research-vs-making-decisions/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Dec 19, 2015 </div>
-  <h1>Research vs Making Decisions</h1>
+  <h1 class="article-title">Research vs Making Decisions</h1>
   
   <p>More often than not, research is something that prevents you from making a decision.
 You want to be sure, so you seek more.
