--- a/public/vim-typography-better-readability-and-look/index.html
+++ b/public/vim-typography-better-readability-and-look/index.html
@@ -39,7 +39,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> Dec 21, 2015 </div>
-  <h1>Vim Typography: Better Readability and Look</h1>
+  <h1 class="article-title">Vim Typography: Better Readability and Look</h1>
   
   <p>A few tricks to improve your Vim editor&rsquo;s readability and theming.
 All examples are for editing <code>.vimrc</code> and <code>.gvimrc</code> files.</p>
