--- a/public/looking-at-craftsmen/index.html
+++ b/public/looking-at-craftsmen/index.html
@@ -41,17 +41,16 @@
   <div class="date secondary"> Sep 20, 2016 </div>
   <h1 class="article-title">Looking at Craftsmen</h1>
   
-  <div class="video video-overflow fit-vid">
+  <div class="video">
   <iframe src="https://www.youtube.com/embed/5tusreUDXUM" frameborder="0" allowfullscreen></iframe>
-  <span class="video-description"> video by
-    <a href="https://www.youtube.com/channel/UCMIjEnXruVHtvgSVf6TgfUg">Wranglerstar</a>
-  </span>
 </div>
 
 <p>I enjoy looking at craftsmen at work.
 You can learn from it by seeing the process, tricks of the trade, work on details that most people won&rsquo;t even notice.</p>
 
 <p>It doesn&rsquo;t matter that it&rsquo;s not my field. It&rsquo;s about mentality.</p>
+
+<p>Video made by <a href="https://www.youtube.com/channel/UCMIjEnXruVHtvgSVf6TgfUg">Wranglerstar</a>.</p>
 
 
 </section>
