--- a/public/404.html
+++ b/public/404.html
@@ -25,6 +25,14 @@
 <body>
 
 <nav>
+  <a class="logo" href="https://bart747.github.io">
+  <svg version="1.1"
+       baseProfile="full"
+       width="30" height="30"
+       xmlns="http://www.w3.org/2000/svg">
+       <circle id="logo-circle" cx="15" cy="15" r="10" fill="black" />
+  </svg>
+  </a>
 <ul class="center">
   <li>
     <a href="https://bart747.github.io">home</a>
@@ -60,27 +68,29 @@
 <footer>
   <div class="wrapper-small">
     <div>
-      <ul class="list-contacts">
+      <ul class="list--contacts">
         <li>
-          <span class="list-contacts-tag">email:</span>
-          <script type="text/javascript">
-              <!--
-              var bfxrpxl = ['.','l','z','.','z','l','h','>','e','s','l','a',':','"','t','i','i','@','b','o','c','h','m','m','a','t','o','a',' ','s','o','m','"','r','e','.','o','f','r','<','i','a','i','@','.','r','o','t','o','l','a','c','l','s','<','"',' ','b','=','e','o','m','h','/','l','>','"','g','m','a','l','m','c','a','s','a','=','l','l','g','a','e'];var xzfilix = [21,73,28,74,67,58,55,81,48,66,57,62,15,53,25,11,33,29,61,37,36,3,38,49,1,13,59,10,40,45,76,77,39,4,17,35,14,6,24,0,51,50,72,68,60,63,20,64,26,18,80,75,42,44,78,8,2,22,7,56,65,9,16,79,34,54,47,69,31,43,52,70,41,32,27,71,46,12,19,30,23,5];var cogtjda= new Array();for(var i=0;i<xzfilix.length;i++){cogtjda[xzfilix[i]] = bfxrpxl[i]; }for(var i=0;i<cogtjda.length;i++){document.write(cogtjda[i]);}
-              -->
-          </script>
+          <div class="list-contacts-tag">email:&nbsp;</div>
+          <div>
+            <script type="text/javascript">
+                <!--
+                var bfxrpxl = ['.','l','z','.','z','l','h','>','e','s','l','a',':','"','t','i','i','@','b','o','c','h','m','m','a','t','o','a',' ','s','o','m','"','r','e','.','o','f','r','<','i','a','i','@','.','r','o','t','o','l','a','c','l','s','<','"',' ','b','=','e','o','m','h','/','l','>','"','g','m','a','l','m','c','a','s','a','=','l','l','g','a','e'];var xzfilix = [21,73,28,74,67,58,55,81,48,66,57,62,15,53,25,11,33,29,61,37,36,3,38,49,1,13,59,10,40,45,76,77,39,4,17,35,14,6,24,0,51,50,72,68,60,63,20,64,26,18,80,75,42,44,78,8,2,22,7,56,65,9,16,79,34,54,47,69,31,43,52,70,41,32,27,71,46,12,19,30,23,5];var cogtjda= new Array();for(var i=0;i<xzfilix.length;i++){cogtjda[xzfilix[i]] = bfxrpxl[i]; }for(var i=0;i<cogtjda.length;i++){document.write(cogtjda[i]);}
+                -->
+            </script>
+          </div>
         </li>
         <li>
-          <span class="list-contacts-tag">github:</span> <a href="https://github.com/bart747">bart747</a>
+          <div class="list-contacts-tag">github:&nbsp;</div> <div><a href="https://github.com/bart747">bart747</a></div>
         </li>
         <li>
-          <span class="list-contacts-tag">twitter:</span> <a href="https://twitter.com/bwhimself">bwhimself</a>
+          <div class="list-contacts-tag">twitter:&nbsp;</div> <div><a href="https://twitter.com/bwhimself">bwhimself</a></div>
         </li>
       </ul>
     </div>
     <small>
     &copy; 2016-2017 Bartosz Wieczorek.
     <a href="https://creativecommons.org/licenses/by/3.0/">
-    Some rights reserved</a>&mdash;please attribute and link back.
+    Some rights reserved</a> &mdash; please attribute and link back.
     </small>
   </div>
 </footer>
