--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -26,14 +26,7 @@
 
 
 <nav>
-  <a class="logo" href="https://bart747.github.io">
-  <svg version="1.1"
-       baseProfile="full"
-       width="30" height="30"
-       xmlns="http://www.w3.org/2000/svg">
-       <circle id="logo-circle" cx="15" cy="15" r="10" fill="black" />
-  </svg>
-  </a>
+  
 <ul class="center">
   <li>
     <a href="https://bart747.github.io">home</a>
@@ -122,7 +115,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </section>
 
-<section class="subnav wrapper-small">
+<section class="subnav">
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
@@ -139,7 +132,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 
 <footer>
-  <div class="wrapper-small">
+
     <div>
       <ul class="list--contacts">
         <li>
@@ -165,7 +158,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
     <a href="https://creativecommons.org/licenses/by/3.0/">
     Some rights reserved</a> &mdash; please attribute and link back.
     </small>
-  </div>
+
 </footer>
 <script type="text/javascript">
 
