--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -26,14 +26,7 @@
 
 
 <nav>
-  <a class="logo" href="https://bart747.github.io">
-  <svg version="1.1"
-       baseProfile="full"
-       width="30" height="30"
-       xmlns="http://www.w3.org/2000/svg">
-       <circle id="logo-circle" cx="15" cy="15" r="10" fill="black" />
-  </svg>
-  </a>
+  
 <ul class="center">
   <li>
     <a href="https://bart747.github.io">home</a>
@@ -91,7 +84,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 </section>
 
-<section class="subnav wrapper-small">
+<section class="subnav">
   <div class="subnav--line">
     
   </div>
@@ -105,7 +98,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 
 <footer>
-  <div class="wrapper-small">
+
     <div>
       <ul class="list--contacts">
         <li>
@@ -131,7 +124,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
     <a href="https://creativecommons.org/licenses/by/3.0/">
     Some rights reserved</a> &mdash; please attribute and link back.
     </small>
-  </div>
+
 </footer>
 <script type="text/javascript">
 
