--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -29,94 +29,43 @@
 
 <nav>
   
-  <a class="logo" href="https://bart747.github.io">
-    <svg
-      xmlns:dc="http://purl.org/dc/elements/1.1/"
-      xmlns:cc="http://creativecommons.org/ns#"
-      xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-      xmlns:svg="http://www.w3.org/2000/svg"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-      xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-      viewBox="0 0 400 400"
-      id="svg2"
-      version="1.1"
-      inkscape:version="0.48.4 r9939"
-      sodipodi:docname="logo.svg">
-      <defs
-        id="defs4" />
-      <sodipodi:namedview
-        id="base"
-        pagecolor="#ffffff"
-        bordercolor="#666666"
-        borderopacity="1.0"
-        inkscape:pageopacity="0.0"
-        inkscape:pageshadow="2"
-        inkscape:zoom="0.35"
-        inkscape:cx="814.92061"
-        inkscape:cy="423.61401"
-        inkscape:document-units="px"
-        inkscape:current-layer="g3776"
-        showgrid="false"
-        width="500px"
-        objecttolerance="10000"
-        guidetolerance="10000"
-        gridtolerance="5"
-        inkscape:window-width="1920"
-        inkscape:window-height="1050"
-        inkscape:window-x="0"
-        inkscape:window-y="30"
-        inkscape:window-maximized="1">
-        <inkscape:grid
-          type="xygrid"
-          id="grid2985"
-          empspacing="5"
-          visible="true"
-          enabled="true"
-          snapvisiblegridlinesonly="true" />
-      </sodipodi:namedview>
-      <metadata
-        id="metadata7">
-        <rdf:RDF>
-          <cc:Work
-            rdf:about="">
-            <dc:format>image/svg+xml</dc:format>
-            <dc:type
-              rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-          </cc:Work>
-        </rdf:RDF>
-      </metadata>
-      <g 
-        inkscape:label="Layer 1"
-        inkscape:groupmode="layer"
-        id="layer1"
-        transform="translate(0,-652.36202)">
-        <g
-          id="g3776">
-          <path
-            sodipodi:nodetypes="cccccccccccc"
-            inkscape:connector-curvature="0"
-            id="path1"
-            d="m 110,892.36202 90,119.99998 90,-119.99998 0,-180 -10,0 0,175 -65,85 -15,29.99998 -30,-114.99998 0,-175 -60,0 z"
-            style="fill:#000000;stroke:none" />
-          <path
-            transform="translate(0,652.36202)"
-            sodipodi:nodetypes="cccc"
-            inkscape:connector-curvature="0"
-            id="path2"
-            d="M 235,309.10714 165,310 l 35,45 z"
-            style="fill:#000000;stroke:none" />
-        </g>
-      </g>
-    </svg>
-  </a>
+<a class="logo" href="https://bart747.github.io">
+<svg
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   version="1.1"
+   viewBox="0 0 400 400"
+   id="svg-logo">
+  <metadata
+     id="metadata10">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:format>image/svg+xml</dc:format>
+        <dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+        <dc:title></dc:title>
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+  <defs
+     id="defs8" />
+  <path
+     d="m 110,230.00001 90,119.99998 90,-119.99998 0,-180 -10,0 0,175 -55,75 -35,0 -20,-75 0,-175 -60,0 z"
+     id="svg-logo--path"
+     style="fill:#000000;fill-opacity:1;stroke:none" />
+</svg>
+</a>
   
 <ul class="center">
   <li>
     <a href="https://bart747.github.io">home</a>
   </li>
   <li>
-    <a href="https://bart747.github.io/blog">blog</a>
+    <a href="https://bart747.github.io/blog/">blog</a>
   </li>
 </ul>
 </nav>
@@ -128,8 +77,6 @@
   
   <p>Here are few famous quotes related to creative work, by Max Planck:</p>
 
-<p></p>
-
 <blockquote>
 <p>A new scientific truth does not triumph by convincing
 its opponents and making them see the light,
@@ -137,7 +84,8 @@ but rather because its opponents eventually die,
 and a new generation grows up that is familiar with it.</p>
 </blockquote>
 
-<p></p>
+<p>
+</p>
 
 <blockquote>
 <p>Anybody who has been seriously engaged in scientific work
