add new post and redesign typography details

--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -83,7 +83,7 @@ It&rsquo;s about handling negative emtions, picking the right thing to work on, 
 <p><small>67 minutes</small>
 <div class="wrapper--nopad">
 <div class="video">
-<iframe width="" height="" src="https://www.youtube.com/embed/d0m0jIzJfiQ" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/d0m0jIzJfiQ" frameborder="0" allowfullscreen></iframe>
 </div>
 </div></p>
 
@@ -94,7 +94,7 @@ It&rsquo;s about handling negative emtions, picking the right thing to work on, 
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/ford-marketing/"> Henry Ford on What Promoted His Cars The Most</a></div>
+      <div><a class="previous" href="https://bart747.github.io/adaptability-planning/"> On Adaptability and Fragility of Plans: How Buildings Learn </a></div>
     
   </div>
   <div class="subnav--line">
