ui details redesign

--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -94,7 +94,7 @@ It&rsquo;s about handling negative emtions, picking the right thing to work on, 
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/adaptability-planning/"> On Adaptability and Fragility of Plans: How Buildings Learn </a></div>
+      <div><a class="previous" href="https://bart747.github.io/ford-marketing/"> Henry Ford on What Promoted His Cars The Most</a></div>
     
   </div>
   <div class="subnav--line">
