--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -127,7 +127,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
   <div class="subnav--line">
     
       <div class="subnav--tag">next: </div>
-      <div><a class="next" href="https://bart747.github.io/adaptability-planning/"> On Adaptability and Fragility of Plans: How Buildings Learn </a></div>
+      <div><a class="next" href="https://bart747.github.io/ambitious-projects/"> Working on Ambitious Projects: Jonathan Blow on Game Design</a></div>
     
   </div>
 </section>
