create patterns library + minor ui redesign

--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -91,11 +91,17 @@
 
 <p>I noticed many similar problems in software design.</p>
 
+<p>It&rsquo;s the first part of six-part BBC TV series <em>How Buildings Learn</em>.
+Written and presented by Stewart Brand.</p>
+
 
 </section>
 
 <section class="subnav">
   <div class="subnav--line">
+    
+      <div class="subnav--tag">prev: </div>
+      <div><a class="previous" href="https://bart747.github.io/patterns/"> </a></div>
     
   </div>
   <div class="subnav--line">
@@ -107,7 +113,7 @@
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
