--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -164,7 +164,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
