--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -106,7 +106,7 @@ It&rsquo;s about handling negative emtions, picking the right thing to work on, 
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
