--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -107,7 +107,7 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
