--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -133,7 +133,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
