--- a/public/future/index.html
+++ b/public/future/index.html
@@ -133,7 +133,7 @@ better? When patterns are familiar, you know what&rsquo;s going on.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
