--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -200,7 +200,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
