--- a/public/jekyll-speed/index.html
+++ b/public/jekyll-speed/index.html
@@ -122,7 +122,7 @@ it was hidden somewhere deeper in the directory.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
