--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -311,14 +311,11 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
   </div>
   <div class="subnav--line">
     
-      <div class="subnav--tag">next: </div>
-      <div><a class="next" href="https://bart747.github.io/pat/"> </a></div>
-    
   </div>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
