--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -113,7 +113,7 @@ two back to just in case check data again.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
