--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -136,7 +136,7 @@ his whole world for the moment.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
