--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -115,7 +115,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
