--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -140,7 +140,7 @@ Good typography is a tool to achieve clarity.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
