--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -119,7 +119,7 @@ Way better than just <em>Password</em>.</p>
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
