--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -206,7 +206,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 </section>
 
 
-<footer>
+<footer class="block">
 
     <div>
       <ul class="list--contacts">
