--- a/public/404.html
+++ b/public/404.html
@@ -30,35 +30,27 @@
   
 <a class="logo" href="https://bart747.github.io">
 <svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   version="1.1"
-   viewBox="0 0 400 400"
-   id="svg-logo">
-  <metadata
-     id="metadata10">
-    <rdf:RDF>
-      <cc:Work
-         rdf:about="">
-        <dc:format>image/svg+xml</dc:format>
-        <dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title></dc:title>
-      </cc:Work>
-    </rdf:RDF>
-  </metadata>
-  <defs
-     id="defs8" />
+  xmlns="http://www.w3.org/2000/svg"
+  version="1.1"
+  viewBox="0 0 400 400"
+  id="svg-logo">
+
   <path
-     d="m 110,230.00001 90,119.99998 90,-119.99998 0,-180 -10,0 0,175 -55,75 -35,0 -20,-75 0,-175 -60,0 z"
+     d="m 110,230.00001 90,119.99998 90,-119.99998 0,-180 -10,0 0,175 -55,75 -35,0 -20,-75 0,-83.27376 0,-32.65874 0,-59.0675 -60,0 z"
      id="svg-logo--path"
+     style="fill:#000000;fill-opacity:1;stroke:none" />
+  <path
+     d="m 260,75 a 25,25 0 1 1 -50,0 25,25 0 1 1 50,0 z"
+     transform="matrix(1.2,0,0,1.2,-57,-10)"
+     id="svg-logo--path2"
+     style="fill:#000000;fill-opacity:1;stroke:none" />
+  <path
+     d="m 245,160 a 20,20 0 1 1 -40,0 20,20 0 1 1 40,0 z"
+     id="svg-logo--path3"
      style="fill:#000000;fill-opacity:1;stroke:none" />
 </svg>
 </a>
-  
+
 <ul class="center">
   <li>
     <a href="https://bart747.github.io">home</a>
@@ -74,8 +66,7 @@
     <h2><span class="orange">Oops!</span><br>
     The page you were looking for isn't here.</h2>
 
-    <p>Maybe it doesn't exist anymore or has been moved.<br>
-      Or maybe the address was typed incorrectly.</p>
+    <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
     
   <br>
    <section class="">
