--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,6 @@
 
 <section class="yesno">
 
-
 <table class="yesno--table yesno-screen-big">
   <tbody>
     <thead>
@@ -213,7 +212,7 @@
 
 <div class="home-main">
   <div class="home-left">
-  <section class="block">
+  <section class="block home--post-list">
 
 <div class="list-title">Recently on <a  href="https://bart747.github.io/blog">Blog</a>:</div>
 <ul class="post-list list--home">
@@ -261,7 +260,10 @@
     </li>
   </ul>
 </section>
-    <section class="block block-email">
+    
+  </div>
+</div>
+   <section class="block block-email">
   <h3 class="block-email--title">Hi, I'm Bartosz and I make interfaces.</h3>
   <span class="block-email--email">contact me via:
     <script type="text/javascript">
@@ -269,9 +271,6 @@
     </script>
   </span>
 </section>
-    
-  </div>
-</div>
 
 
 <footer class="block">
