--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -84,7 +84,6 @@
   <h2 class="patterns--title">yes/no, less/more</h2>
   <section class="yesno">
 
-
 <table class="yesno--table yesno-screen-big">
   <tbody>
     <thead>
@@ -287,7 +286,7 @@ Than you can adjust to the real world without tedious redesigns:
 
 <section class="patterns--section">
   <h2 class="patterns--title">home page post list</h2>
-  <div class=""><section class="block">
+  <div class=""><section class="block home--post-list">
 
 <div class="list-title">Recently on <a  href="https://bart747.github.io/blog">Blog</a>:</div>
 <ul class="post-list list--home">
