--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -102,7 +102,7 @@ Written and presented by Stewart Brand.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
