--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -156,7 +156,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
