--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -98,7 +98,7 @@ It&rsquo;s about handling negative emtions, picking the right thing to work on, 
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
