--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -125,7 +125,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
