--- a/public/future/index.html
+++ b/public/future/index.html
@@ -125,7 +125,7 @@ better? When patterns are familiar, you know what&rsquo;s going on.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
