--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -192,7 +192,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
