--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 
 </section>
 
-<section class="yesno">
+<section class="block yesno">
 
 <table class="yesno--table yesno-screen-big">
   <tbody>
@@ -273,7 +273,7 @@
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
