--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -307,7 +307,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
