--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -82,7 +82,7 @@
 
 <section class="patterns--section">
   <h2 class="patterns--title">yes/no, less/more</h2>
-  <section class="yesno">
+  <section class="block yesno">
 
 <table class="yesno--table yesno-screen-big">
   <tbody>
@@ -341,7 +341,7 @@ Than you can adjust to the real world without tedious redesigns:
 <section class="patterns--section">
   <h2 class="patterns--title">footer</h2>
   
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
