--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -128,7 +128,7 @@ his whole world for the moment.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
