--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -132,7 +132,7 @@ Good typography is a tool to achieve clarity.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
