--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -111,7 +111,7 @@ Way better than just <em>Password</em>.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
