--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -198,7 +198,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
