--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -99,7 +99,7 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
