--- a/public/jekyll-speed/index.html
+++ b/public/jekyll-speed/index.html
@@ -114,7 +114,7 @@ it was hidden somewhere deeper in the directory.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
