--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -105,7 +105,7 @@ two back to just in case check data again.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
