--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -107,7 +107,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 </section>
 
 
-<footer class="block">
+<footer>
 
     <div>
       <ul class="list--contacts">
