--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -67,17 +67,15 @@
   <div class="date secondary"> Dec 12, 2016 </div>
   <h1 class="article-title">Working on Ambitious Projects: Jonathan Blow on Game Design</h1>
   
-  <p>It&rsquo;s not a typical <i>this is how I do it</i> speach. It&rsquo;s definitely not one of those <i>top ten ways&#8230;</i> pieces.</p>
-
-<p>It&rsquo;s got strong emphasis on mental and philosophical side of creating complicated things.
-It&rsquo;s about handling negative emtions, picking the right thing to work on, creative process.</p>
-
-<p><small>67 minutes</small>
+  <p><small>67 minutes</small>
 <div class="wrapper--nopad">
 <div class="video">
 <iframe src="https://www.youtube.com/embed/d0m0jIzJfiQ" frameborder="0" allowfullscreen></iframe>
 </div>
 </div></p>
+
+<p>With emphasis on mental and philosophical side of creating complicated things.
+It&rsquo;s about handling negative emotions, picking the right thing to work on, creative process.</p>
 
 
 </section>
