--- a/public/404.html
+++ b/public/404.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 
-<nav>
+<nav id="nav">
   
-<a class="logo" href="https://bart747.github.io">
+<a class="nav--logo" href="https://bart747.github.io">
 <svg
   xmlns="http://www.w3.org/2000/svg"
   version="1.1"
@@ -59,6 +59,7 @@
     <a href="https://bart747.github.io/blog/">blog</a>
   </li>
 </ul>
+
 </nav>
 
 <section class="article">
@@ -112,6 +113,10 @@
     <a href="https://creativecommons.org/licenses/by/3.0/">
     Some rights reserved</a> &mdash; please attribute and link back.
     </small>
+
+<div class="footer--top">
+<a href="https://bart747.github.io/404/#nav">top</a>
+</div>
 
 </footer>
 
