--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -196,7 +196,7 @@ fit it into a line-hight that equals one $u.</p>
 
 <p>Lets assume that you spotted some problem with an article layout.
 If your <code>.scss</code> files are big and complex, you&rsquo;ll need to do some little research before editing.
-If you have a lot of well organised small ones&hellip;</p>
+If you have a lot of well organized small ones you know where to go:</p>
 
 <ul>
 <li>main (imports)</li>
@@ -212,8 +212,6 @@ If you have a lot of well organised small ones&hellip;</p>
 <li>footer</li>
 <li>logo</li>
 </ul>
-
-<p>&hellip;you know where to go.</p>
 
 <h2 id="helpers">Helpers</h2>
 
@@ -241,11 +239,11 @@ It&rsquo;s better for your brain than playing with endless options.</p>
 
 <p>A grid system with only 4 classes: <code>.row, .half, .third, .quarter</code>, is often enough.</p>
 
-<p>Having 3&ndash;4 font sizes is enough.</p>
+<p>Having 3–5 font sizes is enough.</p>
 
 <p>Building a gallery based on halves and quarters, or rule of thirds gives enough flexibility.</p>
 
-<p>Your article page doesn&rsquo;t need a three column version.</p>
+<p>Your article page doesn&rsquo;t need a three–column version.</p>
 
 <p>One media-object layout with extra modifier classes is better than a few completely different ones.
 Mod classes are something like this: <code>.photo-big,
@@ -269,14 +267,14 @@ That way I don&rsquo;t have to worry about typographic rhythm and spend a lot of
 <p>I also don&rsquo;t pair fonts. I pick one that is flexible and predictable.
 Visual identity stuff is done mostly with colors, weights and placement.</p>
 
-<p>Look at UIs of Twitter, Google search results and GitHub profiles. How many font sizes and families do you see at a glance.</p>
+<p>Look at UIs of Twitter, Google search results and GitHub profiles. How many font sizes and families do you see at a glance?</p>
 
 <h2 id="stay-small">Stay Small</h2>
 
 <p>One of the biggest factors of maintainability is codebase size itself.
 More code, more problems.
 It&rsquo;s good to think about how particular element is useful.
-Does it pay for itself.</p>
+Does it pay for itself?</p>
 
 <h2 id="you-don-t-know-the-future">You Don&rsquo;t Know the Future</h2>
 
