--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/png" href="https://bart747.github.io/icon152.png" sizes="152x152">
   <link rel="icon" type="image/png" href="https://bart747.github.io/icon320.png" sizes="320x320">
 
+  <link rel="manifest" href="https://bart747.github.io/manifest.json">
+
   <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
@@ -51,7 +53,7 @@
     </svg>
   </a>
   <div class="masthead-mini--content">
-    <h1 class="masthead-mini--title">Searching for Simple Solutions for UI Problems</h1>
+    <h1 class="masthead-mini--title">Searching for Simple Solutions to UI Problems</h1>
   </div>
 </section>
 
