UI details redesign

--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -46,33 +46,78 @@
 
 </section>
 
-<div class="work--text">
-  <h1 class="work--title">Hi, this is how I work. It&#39;s about coding to sell.</h1>
+<div class="work--masthead">
+  <div class="work--masthead--content">
+  <h1 class="work--title">
+    Hi, this is how I work.
+    It's about <span class="work--highlight-2">coding</span> to <span class="work--highlight-2">sell</span>.</h1>
   
-  <p class="work--paragraph-big">
+  <p class="p--big">
     There are many factors that make a product page design sell better.
     But there's only a few that repetitively give big impact.
   </p>
+  </div>
+</div>
 
-  <ul>
-    <li>It's clarity of UI</li>
-    <li>speed of getting the idea of USP by viewers (directing viewer's eyes right at the main premise first)</li>
-    <li>speed of page load (Who likes to wait?)</li>
-    <li>testability (easy to A/B test modules)</li>
-    <li>not being pain in the ass for copywriters (simple layout)</li>
-  </ul>
+<div class="work--body">
 
-  <p class="work--paragraph-big">
-    There are many factors that make a product page design sell better.
-    But there's only a few that repetitively give big impact.
-  </p>
+  <section class="work--miniarticle">
+
+    <h2 class="work--miniarticle--title">Smart image loading</h2>
+
+    <p class="">
+      On the beginning only the most important pictures are being downloaded. That way they will show up faster.
+      Less important (below the fold) ones are waiting (max. 2 sec.) for their turn without using bandwidth.
+    </p>
+
+  </section>
+
+  <section class="work--miniarticle">
+
+    <h2 class="work--miniarticle--title">Vanilla JavaScript</h2>
+
+    <p class="">
+      Scripts are small and to the purpose. I like pure functions. I don't like inheritance.
+      It doesn't mean I'm about purely functional programming. Mutable state can be useful.
+    </p>
+
+  </section>
+
+  <section class="work--miniarticle">
+
+    <h2 class="work--miniarticle--title">Modular, Easy to Test and Rearrange</h2>
+
+    <p class="">
+      All patterns like a headline, a call to action button or a gallery
+      are in a form of modules that can be rearranged.
+      They look good in any order.
+      No need need to write additional code to change a page structure.
+    </p>
+
+  </section>
+
+  <section class="work--miniarticle">
+
+    <h2 class="work--miniarticle--title">Just what's needed</h2>
+
+    <p class="">
+      Everything is based on familiar, battle-tested UI patterns.
+      No fancy animations and illustrations that don't do anything except looking cool.
+    </p>
+
+    <p class="">
+      Layouts are simple and proven – nothing new.
+      Fancy layouts lower usability (by being less familiar) and make responsive design hard (by adding variability).
+    </p>
+
+  </section>
   
 </div>
 
 
 
 <div class="work--contact">
-  <h2 class="work--contact--title">Send me an email:</h2>
+  <div class="work--contact--title">Send me an email:</div>
   <div class="work--contact--addr liame"></div>
 </div>
 
