--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -52,8 +52,8 @@
     Hi, this is how I work.
     It's about <span class="work--highlight-2">coding</span> to <span class="work--highlight-2">sell</span>.</h1>
   
-  <p class="p--big">
-    Building interactive product presentations using new technologies creatively, yet keeping it simple and snappy.
+  <p class="work--paragraph-big">
+    Using new technologies creatively, yet keeping it simple and snappy.
   </p>
   </div>
 </div>
@@ -77,7 +77,7 @@
 
     <section class="work--miniarticle">
 
-      <h2 class="work--miniarticle--title">Just what's needed</h2>
+      <h2 class="work--miniarticle--title">Just What's Needed</h2>
 
       <p class="">
         Everything is based on familiar, battle-tested UI patterns.
