--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -91,7 +91,7 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
   <div class="subnav--line">
     
       <div class="subnav--tag">next: </div>
-      <div><a class="next" href="https://bart747.github.io/alt-lazy-load/"> On Lazy Load Overuse and What You can Do Instead</a></div>
+      <div><a class="next" href="https://bart747.github.io/alt-lazy-load/"> On Lazy Load Overuse and What You Can Do Instead</a></div>
     
   </div>
 </section>
