--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -172,7 +172,7 @@ When a structure is right, a procedure that uses it can be more straight forward
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/alt-lazy-load/"> On Lazy Load Overuse and What You can Do Instead</a></div>
+      <div><a class="previous" href="https://bart747.github.io/alt-lazy-load/"> On Lazy Load Overuse and What You Can Do Instead</a></div>
     
   </div>
   <div class="subnav--line">
