langing page redesign

--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -60,15 +60,15 @@
     
     <p>Lazy Load is a great idea, so it&rsquo;s overused frequently.
 Do you remember that situation when you scrolled down
-quickly to get to the middle part and the picture wasn&rsquo;t there yet.</p>
+quickly to get to the middle part and the picture wasn&rsquo;t there yet?</p>
+
+<p></p>
 
 <p>When using a plugin, you can use a threshold/offset option to fire the thing earlier.
 But people can scroll fast.
 If someone visits a site for, lets say,
 the third time and knows that the part she wants is somewhere close to the bottom,
 she will scroll down really, really fast.</p>
-
-<p></p>
 
 <p>In that kind of situations it might be better to forget about typical Lazy Load.</p>
 
