--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -31,10 +31,11 @@
 </head>
 <body>
 
+
 <div class="work">
 
 <nav id="nav" class="topbar">
-
+    
   <div class="topbar--unit">
       <a class="topbar--link" href="https://bart747.github.io">
           Blog
@@ -81,9 +82,8 @@
       <h2 class="work--miniarticle--title">Just What's Needed</h2>
 
       <p class="">
-        Everything is based on familiar, battle-tested UI patterns.
+        Strong focus on essentials.
         No fancy animations and illustrations that don't do anything except looking cool.
-        Layouts are simple and proven – nothing new.
         Fancy layouts lower usability (by being less familiar) and make responsive design hard (by adding variability).
       </p>
 
@@ -116,7 +116,11 @@
 
 </div>
 
-
+<div class="work--myname">
+  <p>My name is Bartosz Wieczorek and I'm not a hipster.
+  <br><span class="secondary">(pronunciation: Bartosh Vietchorek)</span>
+  </p>
+</div>
 
 <div class="work--contact">
   <div class="work--contact--title">Send me an email:</div>
