--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -55,9 +55,9 @@
     <p>Here&rsquo;s some saved content you might enjoy:</p>
 
 <ul>
-<li><a href="./resilient-ui/">5 Notes on How to Design a Resilient UI</a></li>
-<li><a href="./research-decision/">Research vs Making Decisions</a></li>
-<li><a href="./henry-ford-for-makers/">Henry Ford for Makers: Quotes on Design</a></li>
+<li><a href="https://bart747.github.io/resilient-ui/">5 Notes on How to Design a Resilient UI</a></li>
+<li><a href="https://bart747.github.io/research-decision/">Research vs Making Decisions</a></li>
+<li><a href="https://bart747.github.io/henry-ford-for-makers/">Henry Ford for Makers: Quotes on Design</a></li>
 </ul>
 
     
