--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -60,7 +60,7 @@
     
     <p>More often than not, research is something that prevents you from making a decision.
 You want to be sure, so you seek more.
-But your brain is somehow full of doubts all the time&mdash;no matter what you know.</p>
+But your brain is somehow full of doubts all the time, no matter what you know.</p>
 
 <p></p>
 
@@ -70,7 +70,7 @@ If you&rsquo;re not, you&rsquo;re looking for information farther.</p>
 
 <p>All that pushes you away from reality.</p>
 
-<p>It&rsquo;s much better to prototype fast&mdash;do something that barely works.
+<p>It&rsquo;s much better to prototype fast – do something that barely works.
 Than it&rsquo;s no longer just a picture in your head <a href="https://bart747.github.io/process/">no longer just a picture in your head</a>.
 It&rsquo;s clickable.
 You can see actual performance.</p>
