--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -71,9 +71,7 @@
     
     
     <p>I enjoy looking at craftsmen at work.
-You can learn from it by seeing the process, tricks of the trade, work on details that most people won&rsquo;t even notice.</p>
-
-<p>It doesn&rsquo;t matter that it&rsquo;s not my field. It&rsquo;s about mentality.</p>
+You can learn from it by seeing the process, tricks of the trade, work on details that most people won&rsquo;t even notice. It doesn&rsquo;t matter that it&rsquo;s not my field. It&rsquo;s about that detail-oriented thinking.</p>
 
 <p>Video made by <a href="https://www.youtube.com/channel/UCMIjEnXruVHtvgSVf6TgfUg">Wranglerstar</a>.</p>
 
