--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -87,7 +87,7 @@ two back to just in case check data again.</p>
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/future/"> How Not to Be Afraid of the Future: Web Development and Lindy Effect</a></div>
+      <div><a class="previous" href="https://bart747.github.io/jekyll-speed/"> A Hint on How to Speed Up Jekyll Regeneration</a></div>
     
   </div>
   <div class="subnav--line">
