general ui (branding) redesign

--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -82,9 +82,9 @@
       <h2 class="work--miniarticle--title">Just What's Needed</h2>
 
       <p class="">
-        Strong focus on essentials.
-        No fancy animations and illustrations that don't do anything except looking cool.
-        Fancy layouts lower usability (by being less familiar) and make responsive design hard (by adding variability).
+        <i>Does it *really* matter</i> is a great question to ask yourself over and over again.  
+        Lets get rid of those fancy animations and illustrations that don't do anything except looking cool.
+        It will make your message clearer and code more reliable.
       </p>
 
     </section>
