--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -61,9 +61,9 @@
     <p>The most interesting things happen once your software is in real use.
 That&rsquo;s when you can really see what&rsquo;s working and what to change.</p>
 
-<p>It brings us to the problem of changing already working thing. In the wild.
+<p>It brings us to the problem of editing already working thing. In the wild.
 It happens all the time. Don&rsquo;t think you can predict the future.
-You need to design your things with ease of modification in mind.</p>
+You need to design your software with ease of modification in mind.</p>
 
 <p></p>
 
