fix typos, add new article

--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -98,6 +98,9 @@ Written and presented by Stewart Brand.</p>
   </div>
   <div class="subnav--line">
     
+      <div class="subnav--tag">next: </div>
+      <div><a class="next" href="https://bart747.github.io/play/"> Play is Essential</a></div>
+    
   </div>
 </section>
 
