--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="topbar--unit">
-      <a class="topbar--link topbar--link-current" href="https://bart747.github.io/howiwork">
+      <a class="topbar--link topbar--link-current" href="https://bart747.github.io/howiwork/">
           How I Work / About + Contact
       </a>
   </div>
