--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="topbar--unit">
-    <a class="topbar--link" href="https://bart747.github.io/howiwork">
+    <a class="topbar--link" href="https://bart747.github.io/howiwork/">
       How I Work / About + Contact
     </a>
   </div>
