--- a/public/play/index.html
+++ b/public/play/index.html
@@ -60,8 +60,7 @@
     
     <p>You need experimentation with freedom. Play to figure things out and get unstuck.</p>
 
-<p>Ideas that you get by doing are more in touch with reality – they are more likely to work.
-You also see how different things behave and it will help you generate even better thoughts.</p>
+<p>Ideas that you get by doing are more in touch with reality – they are more likely to work.</p>
 
     
     <div class="date secondary"> Nov 16, 2017 </div>
