redesign sw.js fetching order network-cache-offlinePage

--- a/public/404.html
+++ b/public/404.html
@@ -57,7 +57,7 @@
     <br>
     <section class="">
   <ul class="post-list post-list--short">
-    <div class="list-title">Recently on <a href="./blog">Blog</a>:</div>
+    <div class="list-title">Recently on <a href="./">Blog</a>:</div>
     
       <li class=""><a href="https://bart747.github.io/play/">Play is Essential</a></li>
     
