--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -16,7 +16,7 @@
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://bart747.github.io/dist/bundle.css">
 
   <link rel="icon" type="image/png" href="https://bart747.github.io/icon152.png?v=2" sizes="152x152">
@@ -178,13 +178,13 @@
     <div class="nav-menu"></div>
         <div class="topbar--unit">
             <a class="topbar--link" href="https://bart747.github.io">
-                Blog
+                About/Contact
             </a>
         </div>
 
         <div class="topbar--unit">
-            <a class="topbar--link" href="https://bart747.github.io/howiwork/">
-                How I Work / About + Contact
+            <a class="topbar--link" href="https://bart747.github.io/blog/">
+                Blog
             </a>
         </div>
     </div>
