--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -31,36 +31,33 @@
 </head>
 <body>
 
+<nav id="nav" class="topbar work--topbar">
 
-<div class="work">
+    <div class="topbar--content">
+        <div class="topbar--unit--logo">  
+        </div>
 
-<nav id="nav" class="topbar">
-
-  <div class="nav-menu">
-    <div class="topbar--unit">
-        <a class="topbar--link" href="/blog">
-          Blog
-        </a>
+        <div class="nav-menu"></div>
+            <div class="topbar--unit">
+                <a class="topbar--link" href="/">
+                    Blog
+                </a>
+            </div>
+            <div class="topbar--unit">
+              <a class="topbar--link topbar--link-current" href="/howiwork">
+                  About/Contact
+              </a>
+            </div>
+        </div>
     </div>
-
-    <div class="topbar--unit">
-        <a class="topbar--link topbar--link-current" href="/">
-          About/Contact
-        </a>
-    </div>
-  </div>
 
 </nav>
 
 <div class="work--masthead">
   <div class="work--masthead--content">
   <h1 class="work--title">
-    Hi, this is how I work.
-    It's about <span class=" ">coding</span> to <span class=" ">sell</span>.</h1>
-  
-  <p class="work--paragraph-big">
-    Using new technologies creatively, yet keeping it simple and snappy.
-  </p>
+    It's about how to not disappear as avarege.  
+  </h1>
   </div>
 </div>
 
@@ -161,5 +158,3 @@
 
 </body>
 </html>
-
-</div>
