--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -45,13 +45,12 @@
         <div class="nav-menu"></div>
             <div class="topbar--unit">
                 <a class="topbar--link" href="/">
-                    About/Contact
+                    Blog
                 </a>
             </div>
-
             <div class="topbar--unit">
-                <a class="topbar--link" href="/blog">
-                    Blog
+                <a class="topbar--link" href="/howiwork">
+                    About/Contact
                 </a>
             </div>
         </div>
