--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -102,6 +102,9 @@
   </div>
   <div class="subnav--line">
     
+      <div class="subnav--tag">next: </div>
+      <div><a class="next" href="https://bart747.github.io/complexity/"> We&#39;re so Bad at Judging Complexity, Yet We Like to Predict</a></div>
+    
   </div>
 </section>
 
