--- a/public/index.html
+++ b/public/index.html
@@ -31,33 +31,13 @@
 </head>
 <body>
 
-
-<nav id="nav" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
-        </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link topbar--link-current" href="/">
-                    Blog
-                </a>
-            </div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/howiwork">
-                    About/Contact
-                </a>
-            </div>
-        </div>
-    </div>
-
-</nav>
     
 
 
   
     <div class="top-animation">
+
+<a href="/">
 <svg
   id="spaceman"
   xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -242,7 +222,8 @@
       sodipodi:nodetypes="cccc" />
   </g>
 </svg>
- 
+</a> 
+
 </div>
 
 
