--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -41,14 +41,10 @@
         <div class="nav-menu"></div>
             <div class="topbar--unit">
                 <a class="topbar--link" href="/">
-                    Blog
+                    Home
                 </a>
             </div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/howiwork">
-                    About/Contact
-                </a>
-            </div>
+        
         </div>
     </div>
 
